<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KambioActivity">

    <TextView
        android:id="@+id/tvDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvDiv"
        app:layout_constraintStart_toEndOf="@+id/tvTipo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/tvTipo"
        app:layout_constraintEnd_toStartOf="@+id/edtTipo"
        app:layout_constraintStart_toStartOf="@+id/edtTipo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tvCant"
        app:layout_constraintStart_toStartOf="@+id/tvCant" />

    <TextView
        android:id="@+id/tvCant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="198dp"
        android:text="@string/tvCant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/tvCant"
        app:layout_constraintTop_toBottomOf="@+id/tvCant" />

    <Button
        android:id="@+id/btnCalcK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btnCalcK"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="@+id/edtCant" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tvResult"
        app:layout_constraintBottom_toTopOf="@+id/tvBlank"
        app:layout_constraintStart_toStartOf="@+id/tvBlank" />

    <TextView
        android:id="@+id/tvBlank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="17dp"
        android:text="@string/tvBlank"
        app:layout_constraintBottom_toTopOf="@+id/tvBill100"
        app:layout_constraintStart_toStartOf="@+id/tvBill100" />

    <TextView
        android:id="@+id/tvBill100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="23dp"
        android:text="@string/tvBill100"
        app:layout_constraintBottom_toTopOf="@+id/tvBill50"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBill50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="176dp"
        android:text="@string/tvBill50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBill20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="25dp"
        android:text="@string/tvBill20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBill50" />
</androidx.constraintlayout.widget.ConstraintLayout>